modified css file

--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -4,8 +4,17 @@
 	font-size: 50px;
 }
 
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+.centered {
+  	display: block;
+  	margin-left: auto;
+  	margin-right: auto;
+}
+
+.curvy {
+	width: 300px; 
+	height: 100px;  
+  	border: solid 3px #000000;
+  	border-color: #000000 transparent transparent transparent;
+  	border-radius: 90%/100px 100px 0 0;
+  	margin-bottom: -75px;
 }
